--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.13.3",
+    "express-handlebars": "^3.0.0",
     "sax": "^1.1.4"
   }
 }
