new views, csv parsing

--- a/clients/_template/config.json
+++ b/clients/_template/config.json
@@ -1,17 +1,9 @@
 {
-	"Source": "http://www.linkup.com/xmlFeed.php?gzip=1&access=t3n89z&company=589&feed=55a7cf9c71f1c9c495413f934dd1g492",
-	"Header" : "var Feed = [",
-	"Delimiter" : ",\n",
-	"Row": {
-		"Title":"{title}",
-		"ID":"{jobkey}",
-		"URL":"{applyurl}",
-		"Date":"{pubdate}",
-		"TaxDiv":["{company}","{department}"],
-		"TaxCat":["{category}","{specificcategory}"],
-		"TaxLoc":["{country}","{state}","{city}"]
-	},
-	"Footer" : "];",
+	"Source": "http://www.linkup.com/xmlFeed.php?gzip=1&access=t3n89z&company=XXXX&feed=XXXX",
+	"Header" : "Title, ID, URL, Division, Location\n",
+	"Delimiter" : "\n",
+	"Row": "\"{title}\",\"{jobkey}\",\"{applyurl}\",\"{company}-{department}\",\"{city}, {state}\"",
+	"Footer" : "",
 	"Description":{
 		"NameWith":"jobkey",
 		"PullFrom":"description"
