--- a/clients/wegmans/config.json
+++ b/clients/wegmans/config.json
@@ -1,16 +1,9 @@
 {
 	"Source": "http://www.linkup.com/xmlFeed.php?gzip=1&access=t3n89z&company=25135&feed=37bc2f75bf1bcfe8450a1a41c200g304",
-	
-	"Template": {
-		"Title":"{title}",
-		"ID":"{jobkey}",
-		"URL":"{applyurl}",
-		"Date":"{pubdate}",
-		"TaxDiv":["{company}","{department}"],
-		"TaxCat":["{category}","{specificcategory}"],
-		"TaxLoc":["{country}","{state}","{city}"]
-	},
-	
+	"Header" : "Title, Category, ID, URL, Division, City, State\n",
+	"Delimiter" : "\n",
+	"Row": "\"{title}\",\"{category}\",\"{jobkey}\",\"{applyurl}\",\"{department}\",\"{city}\",\"{state}\"",
+	"Footer" : "",
 	"Description":{
 		"NameWith":"jobkey",
 		"PullFrom":"description"
